--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    
     <h2>Thông tin sinh viên</h2>
     <div>
-        <p>Mã sinh viên</p>
+        <p>Mã sssinh viên</p>
         <input type="number"  id="msv" disabled>
     </div>
     <div>
